# kfs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile_docker  README.md  TODO.txt  i386-unknown-none.json  linker.ld
.cargo/: config.toml
boot/grub/: grub.cfg
isofiles/boot/grub/: grub.cfg
src/: console.rs  debug.rs  epilepticattack.bullshit  gdt.rs  help.rs  idt.rs  interrupts.rs  io.rs  keyboard.rs  lib.rs  librs.rs  librt.rs  macros.rs  main.rs  pic8259.rs  prompt.rs  shell.rs  video_graphics_array.rs
src/boot/: boot.asm  mod.rs  multiboot.rs  multiboot_header.asm
src/exceptions/: interrupts.rs  keyboard.rs  mod.rs  panic.rs  pic8259.rs  rtc.rs  syscalls.rs
src/memory/: kmalloc.rs  memory_management.rs  memory_space.rs  mod.rs  page_directory.rs  page_directory_entry.rs  page_table.rs  page_table_entry.rs  physical_memory_managment.rs  pmm.rs  vmalloc.rs
src/shell/: builtins.rs  history.rs  mod.rs  prints.rs
src/structures/: accessflags.rs  gdt.rs  idt.rs  mod.rs
src/utils/: debug.rs  io.rs  librs.rs  mod.rs  shell.rs
src/vga/: mod.rs  parrot.rs  prompt.rs  video_graphics_array.rs
