[package]
name = "kfs"
version = "0.4.2"
edition = "2021"

[lib]
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
spin = "0.9.8"
bitflags = "1.2.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"